--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Dev Nurai</title>
+	<title>Nurai's Portfolio</title>
 	<link rel="stylesheet" href="index.css">
 	<script src="https://kit.fontawesome.com/5d508e5b41.js" crossorigin="anonymous"></script>	
 </head>
@@ -17,15 +17,15 @@
 				<i class="fa fa-map-marker"></i> Mumbai, India
 			</div>
 			<div class="bio">
-                I am a Software Developer with a focus on .NET Core, using my skills to build fast and efficient web applications that are responsive and easy to maintain.
+                A Full Stack Developer having experience in building Web applications with .Net Core, C#, SQL, Angular and some other cool libraries and frameworks.
             </div>
 			
 			<div class="links">
 				<!--<a href="#contact">Contact Me</a>-->
-				<a href="https://drive.google.com/file/d/1WvsjWPXkO87NWiUaizBfFZsdiQ6AUPWa/view?usp=share_link" target="_blank">View Resume</a>
+				<a href="https://drive.google.com/file/d/18adFo-SWVEQH9DRhn2cqemu3PFgIRONX/view?usp=share_link" target="_blank">View Resume</a>
 			  </div>  
 			<div class="social-links">
-				<a href="https://linkedin.com/" class="social-link" target="_blank"><i class="fab fa-linkedin"></i></a>
+				<a href="https://www.linkedin.com/in/dev-nurai/" class="social-link" target="_blank"><i class="fab fa-linkedin"></i></a>
 				<a href="https://github.com/dev-nurai/" class="social-link" target="_blank"><i class="fab fa-github"> </i></a>
 				<a href="mailto:hi@nurai.dev" class="social-link" target="_blank"><i class="fa-solid fa-envelope"></i></a>
 			</div>
