Profile image updated

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<div class="container">
-		<img src="https://pyxis.nymag.com/v1/imgs/cc0/136/b9cf222753067710c77174e1e12124f306-21-keanu.rsquare.w700.jpg" alt="Profile Image" class="profile-image">
+		<img src="https://i.ibb.co/HhLfS8t/Nurai-bio-image.png" alt="Profile Image" class="profile-image">
 		<div>
 			<div class="name">Nurai</div>
 			<div class="designation">
