--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<div class="container">
-		<img src="https://i.ibb.co/HhLfS8t/Nurai-bio-image.png" alt="Profile Image" class="profile-image">
+		<img src="Nurai-profile.png" alt="Profile Image" class="profile-image">
 		<div>
 			<div class="name">Nurai</div>
 			<div class="designation">
@@ -17,7 +17,7 @@
 				<i class="fa fa-map-marker"></i> Mumbai, India
 			</div>
 			<div class="bio">
-                A Full Stack Developer having experience in building Web applications with .Net Core, C#, SQL, Angular and some other cool libraries and frameworks.
+                A Full Stack Developer having experience in building Web applications with .Net Core, C#, SQL, Angular and some other libraries and frameworks.
             </div>
 			
 			<div class="links">
