--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			
 			<div class="links">
 				<!--<a href="#contact">Contact Me</a>-->
-				<a href="https://drive.google.com/file/d/18adFo-SWVEQH9DRhn2cqemu3PFgIRONX/view?usp=share_link" target="_blank">View Resume</a>
+				<a href="Edit-one.pdf" target="_blank">View Resume</a>
 			  </div>  
 			<div class="social-links">
 				<a href="https://www.linkedin.com/in/dev-nurai/" class="social-link" target="_blank"><i class="fab fa-linkedin"></i></a>
