--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				<i class="fa fa-map-marker"></i> Mumbai, India
 			</div>
 			<div class="bio">
-                A Full Stack Developer having experience in building Web applications with .Net Core, C#, SQL, Angular and some other libraries and frameworks.
+                I'm a self-taught full-stack developer proficient in Tech Stack including .Net Core, C#, SQL, and Angular, with entry-level experience in building web applications and APIs.
             </div>
 			
 			<div class="links">
