--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<div class="container">
-		<img src="Nurai-profile.png" alt="Profile Image" class="profile-image">
+		<img src="img/Nurai.png" alt="Profile Image" class="profile-image">
 		<div>
 			<div class="name">Nurai</div>
 			<div class="designation">
