--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			
 			<div class="links">
 				<!--<a href="#contact">Contact Me</a>-->
-				<a href="Resume/Nurai-cv.pdf" target="_blank">View Resume</a>
+				<a href="Resume/Resume-info.pdf" target="_blank">View Resume</a>
 			  </div>  
 			<div class="social-links">
 				<a href="https://www.linkedin.com/in/dev-nurai/" class="social-link" target="_blank"><i class="fab fa-linkedin"></i></a>
