--- a/index.html
+++ b/index.html
@@ -1,36 +1,32 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>Nurai's Portfolio</title>
-	<link rel="stylesheet" href="index.css">
-	<script src="https://kit.fontawesome.com/5d508e5b41.js" crossorigin="anonymous"></script>	
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Nurai's Portfolio</title>
+    <link rel="stylesheet" href="index.css">
+    <script src="https://kit.fontawesome.com/5d508e5b41.js" crossorigin="anonymous"></script>
 </head>
 <body>
-	<div class="container">
-		<img src="img/Nurai.png" alt="Profile Image" class="profile-image">
-		<div>
-			<div class="name">Nurai</div>
-			<div class="designation">
-				Full Stack Developer | Intern @ JugaadHai
-			</div>
-			<div class="location">
-				<i class="fa fa-map-marker"></i> Mumbai, India
-			</div>
-			<div class="bio">
-                I'm a self-taught full-stack developer proficient in Tech Stack including .Net Core, C#, SQL, and Angular, with entry-level experience in building web applications and APIs.
+    <div class="container">
+        <img src="img/Nurai.png" alt="Profile Image" class="profile-image">
+        <div class="content">
+            <div class="name">Nurai</div>
+            <div class="designation">Full Stack Developer @ Binate IT Services</div>
+            <div class="location"><i class="fa fa-map-marker"></i> Mumbai, India</div>
+            <div class="bio">
+                As a self-taught Full-Stack Developer with over 1.5 years of experience, I specialize in backend technologies like .NET Core, MVC, MS-SQL Server, Entity Framework Core, and GitHub. I’m also expanding my skills into front-end development with React. Driven by a passion for exploration and innovation, I’m committed to creating cutting-edge solutions and advancing my tech expertise.
             </div>
-			
-			<div class="links">
-				<!--<a href="#contact">Contact Me</a>-->
-				<a href="Resume/Resume-info.pdf" target="_blank">View Resume</a>
-			  </div>  
-			<div class="social-links">
-				<a href="https://www.linkedin.com/in/dev-nurai/" class="social-link" target="_blank"><i class="fab fa-linkedin"></i></a>
-				<a href="https://github.com/dev-nurai/" class="social-link" target="_blank"><i class="fab fa-github"> </i></a>
-				<a href="mailto:hi@nurai.dev" class="social-link" target="_blank"><i class="fa-solid fa-envelope"></i></a>
-			</div>
-		</div>
-	</div>
-	
+            <div class="links">
+                <a href="Resume/nurai.pdf" target="_blank">View Resume</a>
+            </div>
+            <div class="social-links">
+                <a href="https://www.linkedin.com/in/dev-nurai/" class="social-link" target="_blank"><i class="fab fa-linkedin"></i></a>
+                <a href="https://github.com/dev-nurai/" class="social-link" target="_blank"><i class="fab fa-github"></i></a>
+                <a href="mailto:hi@nurai.dev" class="social-link" target="_blank"><i class="fa-solid fa-envelope"></i></a>
+				<a href="https://medium.com/@dev-nurai" class="social-link" target="_blank"><i class="fab fa-medium"></i></a>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
