--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
             <div class="designation">Full Stack Developer @ Binate IT Services</div>
             <div class="location"><i class="fa fa-map-marker"></i> Mumbai, India</div>
             <div class="bio">
-                As a self-taught Full-Stack Developer with over 1.5 years of experience, I specialize in backend technologies like .NET Core, MVC, MS-SQL Server, Entity Framework Core, and GitHub. I’m also expanding my skills into front-end development with React. Driven by a passion for exploration and innovation, I’m committed to creating cutting-edge solutions and advancing my tech expertise.
+                As a self-taught Full-Stack Developer with nearly 2 years of experience, I specialize in technologies like .NET Core, MVC, MS-SQL Server, Entity Framework Core, and GitHub. I’m also expanding my skills into front-end development with React. Driven by a passion for exploration and innovation, I’m committed to creating cutting-edge solutions and advancing my tech expertise.
             </div>
             <div class="links">
-                <a href="Resume/nurai.pdf" target="_blank">View Resume</a>
+                <a href="Resume/nurai_resume.pdf" target="_blank">View Resume</a>
             </div>
             <div class="social-links">
                 <a href="https://www.linkedin.com/in/dev-nurai/" class="social-link" target="_blank"><i class="fab fa-linkedin"></i></a>
